@startuml Messenger

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table(Account) {
    primary_key(uid) : int
    --
    column(username) : varchar(255) <<unique>>
    column(password_hash) : varchar(255)
    column(created_at) : timestamp
    column(display_name) : varchar(255)
    column(is_deleted) : boolean
    column(shadow_mode) : boolean
    column(full_name_search) : boolean
}

table(Message) {
    primary_key(mid) : int
    --
    foreign_key(sender_uid) : int <<FK>>
    foreign_key(receiver_uid) : int <<FK>>
    --
    column(content) : text
    column(timestamp) : timestamp
}

table(Contact) {
    primary_key(contact_id) : int
    --
    foreign_key(user_id) : int <<FK>>
    foreign_key(contact_user_id) : int <<FK>>
    --
    column(status) : varchar(20) <<enum>>
    column(created_at) : timestamp
}

Account ||--o{ Message : sends
Account ||--o{ Message : receives
Account ||--o{ Contact : has
Account ||--o{ Contact : is contacted by

@enduml
